WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287181
REGRESSION(
288458@main
): <input type=checkbox switch> no longer calls updateTouchEventHandler()
https://bugs.webkit.org/show_bug.cgi?id=287181
Summary
REGRESSION(288458@main): <input type=checkbox switch> no longer calls updateT...
Yasmin Karimi
Reported
2025-02-06 14:01:37 PST
The following tests are constantly timing out on iOS: fast/forms/switch/pointer-tracking-there-and-back-again-rtl.html fast/forms/switch/pointer-tracking-there-and-back-again.html HISTORY:
https://results.webkit.org/?suite=layout-tests&test=fast%2Fforms%2Fswitch%2Fpointer-tracking-there-and-back-again-rtl.html
https://results.webkit.org/?suite=layout-tests&test=fast%2Fforms%2Fswitch%2Fpointer-tracking-there-and-back-again.html
REPRODUCIBILITY: I was able to reproduce this issue on the iOS 18.2 simulator at ToT using the following command: run-webkit-tests --ios-simulator fast/forms/switch/pointer-tracking-there-and-back-again-rtl.html --child-process=1 REGRESSION: This test appears to be constantly timing out since it was introduced at
271542@main
. No timeout logs or stderr output were produced on the results dashboard or locally. The results for these specific tests returned ‘404 Not Found’ errors when attempting to open the diff logs. Additionally, the locally produced logs were inaccessible.
Attachments
Add attachment
proposed patch, testcase, etc.
Yasmin Karimi
Comment 1
2025-02-06 14:12:07 PST
<
rdar://problem/130619586
>
EWS
Comment 2
2025-02-06 14:49:21 PST
Test gardening commit
289967@main
(822ff7754ac0): <
https://commits.webkit.org/289967@main
> Reviewed commits have been landed. Closing PR #40156 and removing active labels.
Anne van Kesteren
Comment 3
2025-02-19 08:02:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40855
Anne van Kesteren
Comment 4
2025-02-19 08:23:45 PST
***
Bug 267890
has been marked as a duplicate of this bug. ***
EWS
Comment 5
2025-02-19 23:01:53 PST
Committed
290692@main
(3138a5facd50): <
https://commits.webkit.org/290692@main
> Reviewed commits have been landed. Closing PR #40855 and removing active labels.
EWS
Comment 6
2025-02-24 19:22:16 PST
Committed
289651.169@safari-7621-branch
(2a1e0ababfc8): <
https://commits.webkit.org/289651.169@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2665 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug