REGRESSION(288458@main): <input type=checkbox switch> no longer calls updateTouchEventHandler() https://bugs.webkit.org/show_bug.cgi?id=287181 rdar://130619586

Reviewed by Aditya Keerthi.

When the parser calls initializeInputTypeAfterParsingOrCloning() the
switch attribute is not initialized yet and we have not updated
initializeInputTypeAfterParsingOrCloning() to account for the switch
attribute, so when descendants of that method call
updateTouchEventHandler(), isSwitch() still returns false. This means
no touch event listeners are registered. (The switch attribute is
initialized immediately after
initializeInputTypeAfterParsingOrCloning() is invoked.)

So we update the comment in HTMLInputElement::attributeChanged to
indicate we solely rely on updateUserAgentShadowTree() for the switch
attribute and move up updateTouchEventHandler() before the early return
to ensure it's always called when the switch attribute is initialized.

Then we clean up TestExpectations. We skip all the
<input type=checkbox switch> tests that depend on ENABLE(TOUCH_EVENTS).

And finally we update pointer-tracking-there-and-back-again[-rtl].html.
We port the changes 285662@main made to -rtl to non-rtl, but we remove
the waitUntilDone() infrastructure as we use reftest-wait. We add a
wait(0.21) call to account for 278311@main. We reduce the duration of
the touch moves, but not to 0 as that makes them not register. In -rtl
we also adjust the move to the left so it overshoots x by 1 pixel. This
makes it match the non-rtl version better. And we explicitly log the
current switched state so we can instantly tell if there's some kind of
regression on that front.

* LayoutTests/fast/forms/switch/click-disabled.html:
* LayoutTests/fast/forms/switch/pointer-tracking-there-and-back-again-expected.html:
* LayoutTests/fast/forms/switch/pointer-tracking-there-and-back-again-rtl-expected.html:
* LayoutTests/fast/forms/switch/pointer-tracking-there-and-back-again-rtl.html:
* LayoutTests/fast/forms/switch/pointer-tracking-there-and-back-again.html:
* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::attributeChanged):

Canonical link: https://commits.webkit.org/290692@main